# Franka-Emika-Admittance-Control

./: .gitignore  README.md  admittance_control_law.drawio  bode.py  build.sh  controller-side-bars.drawio  controller.drawio  ergodic.drawio  ergodicstates.drawio  move.sh  offline_plots.py  plotScratch.py  pull_data.sh  system-diagram.drawio
assets/: admittance_controller.drawio
controls/: CMakeLists.txt  addmitance.cpp  admitance.cpp  cartesian_impedance_control.cpp  examples_common.h  white_light.cpp
controls/net_ft/: ati_axia_ft_interface.hpp  hardware_interface.cpp  hardware_interface.hpp  test_ft.cpp
saved_data/bode/: bode.py
saved_data/bode/old/push_past_your_limits/: config.json
saved_data/bode/with_safety_limits/: config.json
saved_data/friction_tests/sin_in_Y/: config.json
saved_data/friction_tests/sin_in_Y_big/: config.json
saved_data/spring_demo/data_2025-06-23_11-48-23/: actual_wrench.csv  desired_accel.csv  orientation_error.csv  torques_c.csv  torques_d.csv  torques_g.csv  torques_o.csv  translation.csv  translation_d.csv  velocity.csv
saved_data/spring_demo/demo1/: params.txt
saved_data/spring_demo/demo2/: params.txt
saved_data/spring_demo/demo3/: params.txt
saved_data/spring_demo/demo4/: params.txt
saved_data/trajectories/: circle-bad.csv  circle-good.csv  clean-bad.csv  clean-good.csv  inner-bad.csv  line-good.csv  path-bad.csv  path-good.csv  run.csv  space-bad.csv  space-good.csv  square-bad.csv  square-good.csv  square2-good.csv  test-bad.csv  test-good.csv  test2-good.csv  traingle-good.csv  triangle-good.csv
src/: CMakeLists.txt  examples_common.cpp
src/controllers/: CMakeLists.txt  package.xml
src/controllers/config/: config.json
src/controllers/include/: data_dumper.hpp  minimal_publisher.hpp
src/controllers/src/: admittance.cpp  spring_demo.cpp  spring_demo_seperate.cpp  white_light.cpp
src/controllers/src/net_ft/: ati_ft_interface.hpp  net_ft_interface.cpp  net_ft_interface.hpp  test_ft.cpp
src/controllers/src/utils/: data_dumper.cpp  minimal_publisher.cpp
src/data_analysis/: package.xml  setup.cfg  setup.py
src/data_analysis/data_analysis/: position_tracking.py  torque_tracking.py
src/data_analysis/launch/: report.xml
src/data_bridge/: CMakeLists.txt  package.xml
src/data_bridge/config/: actual_wrench.csv  config.json
src/data_bridge/include/: SafeQueue.hpp  data_dumper.hpp  examples_common.h  spring_simulate.hpp  traj_simulate.hpp
src/data_bridge/src/: admitance.cpp  admittance.cpp  admittance_fixed.cpp  data_dumper.cpp  data_node.cpp  examples_common.cpp  joint_character.cpp  minimal_publisher.cpp  one_joint.cpp  spring_demo.cpp  spring_demo_seperate.cpp  spring_simulate.cpp  traj_simulate.cpp
src/data_bridge/src/net_ft/: CMakeLists.txt  ati_ft_interface.cpp  hardware_interface.cpp  hardware_interface.hpp  test_ft.cpp
src/data_bridge/src/utils/: butterworth.cpp  data_dumper.cpp  ft_sensor.cpp  traj_simulate.cpp
src/data_interfaces/: CMakeLists.txt  package.xml
src/data_interfaces/msg/: Robot.msg
src/ergodic/: package.xml  setup.cfg  setup.py
src/ergodic/ergodic/: ergodic_planner.py  ergodic_wrapper.py  notebook.py  plot.py
src/franka_interaction/: CMakeLists.txt  package.xml
src/franka_interaction/config/: config.json
src/franka_interaction/include/: SafeQueue.hpp  butterworth.hpp  ft_sensor.hpp  traj_simulate.hpp
src/franka_interaction/src/: admittance.cpp  spring_demo.cpp  spring_demo_seperate.cpp
src/franka_interaction/src/utils/: butterworth.cpp  minimal_publisher.cpp
src/net_ft/: CMakeLists.txt  ati_axia_ft_interface.cpp
